--- a/index.html
+++ b/index.html
@@ -854,6 +854,11 @@ app.exec()
 
 <section data-transition="fade-in fade-out">
   <h3>Example: Python app (QML)</h3>
+  <video muted data-autoplay style="width: 95%;" src="video/robot_arm.mp4"></video>
+</section>
+
+<section data-transition="fade-in fade-out">
+  <h3>Example: Python app (QML)</h3>
   <video muted data-autoplay style="width: 95%;" src="video/car.mp4"></video>
 </section>
 
@@ -864,11 +869,35 @@ app.exec()
 </section>
 
 <section data-transition="fade-in fade-out">
-  Any real application?
+  Any <i class="red">real</i> application? 🙄
 </section>
 
 <section data-transition="fade-in fade-out">
-  <h3>What now?</h3>
+  <img style="width: 99%;" src="img/qt_1_automotive.png"/>
+</section>
+
+<section data-transition="fade-in fade-out">
+  <img style="width: 99%;" src="img/qt_2_aviation.png"/>
+</section>
+
+<section data-transition="fade-in fade-out">
+  <img style="width: 99%;" src="img/qt_3_vehicles.png"/>
+</section>
+
+<section data-transition="fade-in fade-out">
+  <img style="width: 99%;" src="img/qt_4_healthcare.png"/>
+</section>
+
+<section data-transition="fade-in fade-out">
+  <img style="width: 99%;" src="img/qt_5_embedded.png"/>
+</section>
+
+<section data-transition="fade-in fade-out">
+  <img style="width: 99%;" src="img/qt_6_desktopmobile.png"/>
+</section>
+
+<section data-transition="fade-in fade-out">
+  <h3>Interested?</h3>
   <ul>
     <li><i class="qt-lemon">Telegram</i> <a href="https://t.me/qtforpython">t.me/qtforpython</a></li>
     <li>Wiki page <a href="https://pyside.org">pyside.org</a></li>
